--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
   pre_build:
     commands:
       - echo installing eb-cli
-      - sudo pip3 install awsebcli --upgrade
+      - pip3 install awsebcli --upgrade
   build:
     commands:
       - echo Build started on `date`
