--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -2,7 +2,7 @@ branch-defaults:
   master:
     environment: main
 global:
-  application_name: express-yarn
+  application_name: node-eb
   branch: master
   default_ec2_keyname: null
   default_region: us-east-1
