--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "~": "file:./src",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^3.22.0"
+    "helmet": "^3.23.1",
+    "~": "file:./src"
   },
   "devDependencies": {
-    "prettier": "^2.0.4"
+    "husky": ">=4",
+    "lint-staged": ">=10",
+    "prettier": "^2.0.5"
   },
   "prettier": {
     "singleQuote": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,md}": "prettier --write"
   }
 }
